--- a/frontend/hacklytics/package.json
+++ b/frontend/hacklytics/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-scramble": "^2.2.15"
   },
   "devDependencies": {
     "@types/node": "^20",
