--- a/frontend/hacklytics/package.json
+++ b/frontend/hacklytics/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.750.0",
+    "@aws-sdk/lib-storage": "^3.750.0",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
@@ -27,7 +29,8 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "use-scramble": "^2.2.15"
+    "use-scramble": "^2.2.15",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
